--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -1,14 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
-* {
+body {
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
     font-family: 'oswals' sans-serif;
     
 }
-
-
 
 .logo {
     letter-spacing: 5px;
