--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
-body {
+* {
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
-    font-family: 'oswals' sans-serif;
+    font-family: 'lato' sans-serif;
     
 }
 
@@ -119,10 +119,16 @@ p {
     flex-direction: row;
     justify-content: center;
 }
-
+.models-text {
+    text-align: center;
+    font-size: 2em;
+    margin: 26px;
+    color: rgb(98, 93, 93);
+    
+}
 .img-galley {
     width: 80%;
-    margin: 100px auto 50px;
+    margin: 47px auto 50px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 30px;
@@ -157,10 +163,9 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
-   
     position:relative;
 }
+
  #we-are h2{
     text-align: center;
     color:#343434;
@@ -389,14 +394,15 @@ footer {
     .form-image {
         height: 97vh;
     }
-    .hero-image {
-        background-image: url(../css/images/man-weaing-a-hat.jpeg);
-    }
+    
 }
 @media screen and (max-width:1300px){
  
 .form-image {
     height: 131vh;
+}
+.models-text{
+    font-size: 1em;
 }
 
 
@@ -579,6 +585,7 @@ footer {
 .container iframe {
     width: 375px;
 }
+
 
 }
 @media screen and (max-width:350px) {
