--- a/catwalk/css/index.css
+++ b/catwalk/css/index.css
@@ -4,7 +4,7 @@
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
-    font-family: 'lato' sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     
 }
 
@@ -128,7 +128,7 @@ p {
 }
 .img-galley {
     width: 80%;
-    margin: 47px auto 50px;
+    margin: 31px auto 50px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 30px;
@@ -156,7 +156,7 @@ p {
     height: 67vh;
     width: 100%;
     padding: 7%;
-    margin: -5;
+    margin: -5 0;
     background-repeat: no-repeat;
     background-size:cover;
     background-position: right;
@@ -523,7 +523,7 @@ footer {
         font-size: 1em;
     }
     #cover-text h2 {
-        font-size: 13m;
+        font-size: 1em;
        
     }
   
